<resources>
    <string name="app_name">Better City</string>
    <string name="form_username">Username</string>
    <string name="form_password">Password</string>
    <string name="form_login">Login</string>
    <string name="form_reset">Send Password Reset Link</string>
    <string name="form_register">Register</string>
    <string name="form_no_account">Don\'t have an account ?</string>
    <string name="form_forgot_password">Forgot your password ?</string>
    <string name="confirm_password">Password again</string>
    <string name="form_have_account">Already have an account ? </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="form_email">Email</string>
    <string name="form_input_email">Please key in your login email</string>
    <string name="form_phone">Contact No.</string>
    <string name="form_logout">Log Out</string>
    <string name="no_content">No Content</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add Person</string>
    <string name="action_search">Search</string>
    <string name="action_main">Home</string>
    <string name="action_map">Map</string>
    <string name="action_complaint">Recent Complaints</string>
    <string name="action_personal">Personal</string>
    <string name="action_chat">Message</string>
    <string name="action_tip">Tips</string>
    <string name="action_sign_out">Log Out</string>
    <string name="action_send">Send</string>
    <string name="action_enter_comment">Please enter comment here</string>
    <string name="info_no_comment">No comment in this post</string>
    <string name="info_comments">Comments:</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_complaint">Complaints</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_hotline">Hotline</string>
    <string name="title_info">Pepper Board Info</string>
    <string name="title_assign">Assign Officer</string>
    <string name="title_officer">Update Action</string>
    <string name="title_detail">Details Info</string>

    <string name="google_map_key">AIzaSyD_CHxxEhIGKL3BYV77cGNXmN5vXhRKHoo</string>
    <string name="title_activity_maps">Map</string>

    <!-- status bar-->
    <string name="status">Status: </string>
    <string name="reason">Reason: </string>
    <string name="action">Action Taken: </string>
    <string name="image"> Image: </string>
    <string name="last_action">Status: </string>
    <string name="officer_name">Assigned to: </string>

    <!-- option bar-->
    <string name="tvStatus">Status </string>
    <string name="tvOfficer">Assign Officer </string>
    <string name="tvAction">Action Taken </string>
    <string name="tvReason">Reason </string>
    <string name="tvUpdate">Update Action</string>
    <string name="tvImage">Image </string>

    <!--Profile-->
    <string name="tvTotalComplaint">complaints </string>
    <string name="tvCompletedComplaint">solved </string>
    <string name="tvFollowedPost">followed </string>
    <string name="no_noti">No notification</string>
    <string name="no_msg">No message yet.. </string>
    <string name="description">Description</string>
    <string name="support">Support</string>
    <string name="support_none">0 Supported</string>
    <string name="affected">Affected</string>
    <string name="affected_none">0 Affected</string>
    <string name="image_desc">Complaint image</string>
    <string name="txtSuggestion">Suggestion from post\'s owner</string>

    <!--Sample String-->
    <string name="dummy_title">This is a testing title</string>
    <string name="dummy_text">
        It is a long established fact that a reader will be distracted by the readable content of a
        page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
        normal distribution of letters, as opposed to using \'Content here, content here\', making
        it look like readable English. Many desktop publishing packages and web page editors now use
        Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many
        web sites still in their infancy. Various versions have evolved over the years, sometimes by
        accident, sometimes on purpose (injected humour and the like).</string>
    <string name="confirm_solved">This action solve the report ? </string>
    <string name="confirm_image">Click to add image </string>
    <string name="confirm_add">Add</string>

    <string name="title_activity_image_fullscreen">ImageFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_view_on_map">Map</string>
    <string name="title_activity_single_report">SingleReportActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
