<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/preview"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_desc"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"/>

    <ProgressBar
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:padding="35dp"
        android:indeterminate="true"
        android:id="@+id/loading_img"/>

    <RelativeLayout
        android:id="@+id/user_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/preview"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/ic_person_black_24dp"
            android:id="@+id/profile_image"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profile_image"
            android:layout_marginStart="8dp"
            android:text="@string/form_username"
            android:layout_centerVertical="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <ImageView
            android:id="@+id/status"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_detail"
        android:id="@+id/title"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/preview"
        android:maxLines="3"
        android:ellipsize="end"
        android:text="@string/dummy_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="@string/dummy_title"
        android:textAppearance="@style/TextAppearance.Design.Hint"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/timestamp"/>

</RelativeLayout>
