<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mt_gray5"
    tools:context="kuchingitsolution.betterpepperboard.action.ActionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:text="@string/tvStatus"/>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
            android:text="@string/dummy_title"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:text="@string/tvOfficer" />

        <TextView
            android:id="@+id/tvOfficerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
            android:text="@string/dummy_title"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/mt_gray5"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/action_list"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
