<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="kuchingitsolution.betterpepperboard.auth.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="36sp"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:id="@+id/app_logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/TxtIptLyt1">

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:hint="@string/form_input_email" />

        </android.support.design.widget.TextInputLayout>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_send"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_circle"
            android:text="@string/form_reset"
            android:textColor="@color/colorWhite"
            app:spinning_bar_width="4dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"/>

    </LinearLayout>

</RelativeLayout>
