<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_status"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    android:background="@android:color/white"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/btnStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:contentDescription="@string/action"
            app:srcCompat="@drawable/ic_settings_black_24dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/tvStatus"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:id="@+id/labelStatus"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:id="@+id/tvStatus"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnOfficer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:contentDescription="@string/action"
            app:srcCompat="@drawable/ic_person_black_24dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/tvOfficer"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:id="@+id/labelReason"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:id="@+id/tvReason"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnUpdateAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:contentDescription="@string/action"
            app:srcCompat="@drawable/ic_update_black_24dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/tvUpdate"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:id="@+id/labelUpdateAction"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:id="@+id/tvUpdateAction"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
