<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".officer.OfficerActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tvAction"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/confirm_solved"/>

            <RadioGroup
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/solved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:checked="false"
                    android:text="Yes"/>
                <RadioButton
                    android:id="@+id/unsolve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:checked="true"
                    android:text="No"/>
            </RadioGroup>

            <Button
                android:id="@+id/add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_trans_base10"
                android:text="@string/confirm_image"
                android:drawableEnd="@drawable/ic_add_black_24dp"/>

            <RelativeLayout
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/ivImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:maxHeight="250dp"
                    android:scaleType="centerCrop"
                    android:src="@color/colorPrimary"
                    android:adjustViewBounds="true"/>

                <ImageButton
                    android:id="@+id/cancel_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_trans_base10"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/places_ic_clear"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:layout_marginTop="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@color/colorPrimaryDark"
                    android:padding="5dp"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/submit"
                    android:text="@string/confirm_add"/>

            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
